@startuml Library_Database
hide methods
hide stereotypes
skinparam backgroundColor #fafafa
skinparam linetype ortho
skinparam defaultFontSize 12
skinparam classBackgroundColor #ffffff
skinparam classBorderColor #40504b
skinparam classArrowColor #40504b

entity "readers" as readers {
    * id : INTEGER <<PK>>
    --
    name : TEXT
    email : TEXT
    phone : TEXT
    registration_date : TEXT
    status : TEXT
}

entity "books" as books {
    * id : INTEGER <<PK>>
    --
    title : TEXT
    author : TEXT
    isbn : TEXT <<UNIQUE>>
    description : TEXT
    publication_date : TEXT
    total_copies : INTEGER
    available_copies : INTEGER
}

entity "copies" as copies {
    * id : INTEGER <<PK>>
    --
    book_id : INTEGER <<FK>>
    status : TEXT
    location : TEXT
    acquisition_date : TEXT
}

entity "borrowings" as borrowings {
    * id : INTEGER <<PK>>
    --
    reader_id : INTEGER <<FK>>
    copy_id : INTEGER <<FK>>
    order_id : INTEGER
    borrow_date : TEXT
    due_date : TEXT
    return_date : TEXT
    status : TEXT
}

entity "orders" as orders {
    * id : INTEGER <<PK>>
    --
    reader_id : INTEGER <<FK>>
    book_id : INTEGER <<FK>>
    order_date : TEXT
    status : TEXT
    fulfilled_date : TEXT
    cancellation_date : TEXT
    reserved_copy_id : INTEGER <<FK>>
    reservation_expiry_date : TEXT
}

readers ||--o{ borrowings : "reader_id"
readers ||--o{ orders : "reader_id"
books ||--o{ copies : "book_id"
books ||--o{ orders : "book_id"
copies ||--o{ borrowings : "copy_id"
copies ||--o| orders : "reserved_copy_id"

note bottom of orders
  status: pending | fulfilled | cancelled
  reservation expiry: 3 days
end note

note bottom of borrowings
  status: active | returned
end note

@enduml
